# screenshot_text_indexer

./: .gitignore  README.md  dependencies.txt  screenshot_text_indexer_tool.py
py_indexer/: .gitignore  screenshot_text_indexer_tool.py
rust-indexer/: Cargo.toml  README.md
rust-indexer/src/: main.rs
rust-search_cli/: Cargo.toml  README.md
rust-search_cli/src/: main.rs
rust-search_gui/: .gitignore  Cargo.toml
rust-search_gui/src/: main.rs
