[package]
name = "rust-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.91"
serde_json = "1.0.91"
serde_derive = "1.0"

lexical-sort = "0.3.1"

futures = "0.3.5"

# Windows SDK
[dependencies.windows]
features = [
    "Media_Ocr", 
    "Graphics_Imaging", 
    "Storage_Streams", 
    "Foundation",
]
